@@ -2,11 +2,13 @@ package com.air.nc5dev.acion;
 
 import com.air.nc5dev.acion.base.AbstractIdeaAction;
 import com.air.nc5dev.util.idea.LogUtil;
+import com.intellij.ide.BrowserUtil;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 
 import java.awt.*;
 import java.io.IOException;
 import java.net.URI;
+import java.net.URL;
 
 /**
  * 打开使用帮助（gitee网址）        </br>
@@ -20,13 +22,18 @@ import java.net.URI;
  * @return
  */
 public class HelpMeAction extends AbstractIdeaAction {
+    public static String URL = "https://gitee.com/yhlx/idea_plugin_nc5devplugin";
+
     @Override
     protected void doHandler(AnActionEvent e) {
-        final String url = "https://gitee.com/yhlx/idea_plugin_nc5devplugin";
         try {
-            Desktop.getDesktop().browse(URI.create(url));
-        } catch (IOException e1) {
-            LogUtil.error("无法自动打开浏览器，请手工打开网址：" + url, e1);
+            BrowserUtil.browse(new URL(HelpMeAction.URL));
+        } catch (Exception exception) {
+            try {
+                Desktop.getDesktop().browse(URI.create(URL));
+            } catch (Exception e1) {
+                LogUtil.error("无法自动打开浏览器，请手工打开网址：" + URL, e1);
+            }
         }
     }
 }
